# rust-app-example

./: .env  Cargo.toml
src/: main.rs
src/handler/: product_handler.rs
src/models/: product.rs
src/router/: mod.rs
src/states/: app_config.rs
