[package]
edition = "2021"
name = "auth-app"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
futures = "0.3.30"
log = "0.4.21"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
